--- a/frontend/src/components/UnlockMira.css
+++ b/frontend/src/components/UnlockMira.css
@@ -1,39 +1,39 @@
 .unlock-section {
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    color: #ffffff6d;
-    transform: translate(-50%, 100%);
-    padding: 20px;
-    font-size: large;
-    width: 80%;
-    height: 60%;
-    background: #ffffff1a;
-    backdrop-filter: blur(10px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-    border-radius: 10px;
-  }
-  
-  .unlock-section.active {
-    opacity: 1;
-    transform: translate(-50%, -50%);
-  }
-  
-  .unlock-title {
-    position: absolute;
-    top: 5px;
-    text-align: center;
-    margin: 0px 0;
-    font-size: 20px;
-    color: #ffffff59; /* Adjust text color */
-    padding-top: 5px;
-  }
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  color: #ffffff6d;
+  transform: translate(-50%, 100%);
+  padding: 20px;
+  font-size: large;
+  width: 80%;
+  height: 60%;
+  background: #ffffff1a;
+  backdrop-filter: blur(10px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  border-radius: 10px;
+}
+
+.unlock-section.active {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+
+.unlock-title {
+  position: absolute;
+  top: 5px;
+  text-align: center;
+  margin: 0px 0;
+  font-size: 20px;
+  color: #ffffff59;
+  padding-top: 5px;
+}
   
   .error-message {
     color: red;
@@ -44,8 +44,8 @@
   
 
 .card-signup {
-    width: 80%; /* Set the width to 50% */  
-    margin: 5px auto; /* Increase top and bottom margin to prevent overlap */ 
+    width: 100%; /* Set the width to 50% */  
+    margin: 0px; /* Increase top and bottom margin to prevent overlap */ 
     background-color: #171717;
     border-radius: 25px;
     transition: 0.4s ease-in-out;
@@ -177,33 +177,25 @@
 }
 
 .card-container {
-  width: 60%;
-  height: 70%;
-  perspective: 1000px;
-  position: relative;
+  display: flex; /* Align the cards horizontally */
+  justify-content: space-around; /* Add space between the cards */
+  width: 100%; /* Use the full available width */
+  margin: 0; /* Center the cards */
+
 }
 
-.flip-container {
-  perspective: 1000px;
-  width: 60%;
-  height: 70%;
-  margin: 45px auto;
-  position: relative;
+.card-common {
+  width: 75%; /* Set the width of each card */
+  margin: 65px 75px;
+  background-color: #171717;
+  border-radius: 25px;
+  transition: 0.4s ease-in-out;
+  color: #d3d3d3;
+  padding: 5px;
+  overflow-y: auto;
+  align-items: center;
+  justify-content: center;
 }
-
-.flipper {
-  transition: 0.6s;
-  transform-style: preserve-3d;
-  position: relative;
-  width: 75%;
-  height: 150%;
-  align-items: right;
-}
-
-.flip-container.flip .flipper {
-  transform: rotateY(180deg);
-}
-
 
 .card-common:hover {
   transform: scale(1.05);
@@ -219,8 +211,8 @@
 .front,
 .back {
   position: absolute;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   backface-visibility: hidden;
@@ -234,16 +226,16 @@
 
 .back {
   transform: rotateY(180deg);
-  width: 70%; /* Set the width to 50% */  
-  height: 70%; /* Set the height to 50% */
+  width: 80%; /* Set the width to 50% */  
+  height: 80%; /* Set the height to 50% */
   background-color: #171717;
   border-radius: 25px;
   transition: 0.4s ease-in-out;
   color: #ffffffa7;
-  padding: 5px;
   overflow-y: auto; /* Enable scrolling if content exceeds the height */
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 .toggle-auth-link {
