--- a/frontend/src/components/Dashboard.css
+++ b/frontend/src/components/Dashboard.css
@@ -107,7 +107,7 @@
   font-style: bold;
   max-width: 100%;
   border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.25);
   color: #000000b4;
   flex-direction: column;
   justify-content: center;
@@ -157,7 +157,7 @@
 }
 
 .chat-input:hover {
-  background: #fffffffd;
+  background: #ffffffa1;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   color: #000;
@@ -167,6 +167,7 @@
   color: #ffffff88; /* Or any other color that fits your theme */
   opacity: 1; /* Firefox */
   outline: none;
+  color: rgba(0, 0, 0, 0.250);
 }
 
 /* Send Button */
