--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -67,38 +67,38 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 40;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .mobile-menu-container {
   position: absolute;
   top: 16px;
   right: 0;
-  width: 200px;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 15px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  display: flex; /* Align menu items horizontally */
-  flex-direction: row; /* Align menu items horizontally */
-  flex-wrap: wrap; /* Wrap items if there are too many */
+  display: flex; /* Use flexbox to align items horizontally */
+  flex-direction: row; /* Align items horizontally */
+  flex-wrap: wrap; /* Allow items to wrap if necessary */
 }
 
 .mobile-menu-item {
-  display: block;
-  width: 100%;
+  padding: 5px 15px;
   text-align: left;
-  padding: 10px 15px;
-  color: #fff; /* Set the text color */
+  color: #f0f0f0;
   transition: background-color 0.3s ease;
-  border: none;
-  border-radius: 25px;
-  background: transparent;
-  cursor: pointer;
+  border-radius: 5px; /* Optional: add rounded corners */
+  background: transparent; /* Optional: set a background color */
+  margin-right: 25px; /* Add spacing between menu items */
 }
 
 .mobile-menu-item:hover {
   background-color: rgba(200, 200, 200, 0.5); /* Adjust the hover color */
-  width: 80%;
-  transition: all  0.5s ease;
+  width: 25%;
+  transition: all  0.15s ease;
 }
